2008-12-19 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* configure.in:

	Release 0.21


2008-12-18 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* Bicho/bicho.conf: Trunk file to default options

	Trunk config file to default options


2008-12-18 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.es>

	* configure.in:

	Release 0.2


2008-09-04 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/backends/sf.py: Now, it recognises the name of the project and
	the name of the tracker
	* Bicho/SqlBug.py: Added a new storm object, GeneralInfo, which
	contains general info about: project, url, tracker's name, date
	* Bicho/Bug.py: GeneralInfo object added

	Now, it detects the project name, url, tracker's name and date of
	analysis. That info is stored in a database


2008-09-02 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/Bug.py: Added support for field "changes" from SourceForge
	HTML (bug's history)
	* Bicho/SqlBug.py: Added support for bug's history, new table for
	sqlite, mysql and postgres
	* Bicho/backends/sf.py: "Changes" are added
	* Bicho/backends/ParserSFBugs.py: The statets machine was modified.
	Now "changes" HTML is supported

	Changes from SourceForge HTML is now recorded and stored in the
	database


2007-10-29 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/backends/ParserSFBugs.py: Fixed [#330] Error parsing information from a bug in SourceForge

	Fixed: [#330] Error parsing information from a bug in SourceForge


2007-10-25 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/backends/ParserSFBugs.py: Added source code to unify in the same file SourceForge parser functionality
	* Bicho/backends/HTMLUtils.py: Used just for HTML Utils (join urls and so on)
	* Bicho/backends/sf.py: Parser for getting links was renamed

	Unification of SourceForge parser in just one file


2007-10-13 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>
